fixed bugs, adjusted markups
* footer picture is now attached fixed so that it doesnt get stretched out
* adjusted regular skills section gap in x and y axis
* added name initials in About an Copyright section
* made message form fields bit rounded and padded
* gave header greetings text a bit subtle animtion, more could be done here

--- a/src/index.css
+++ b/src/index.css
@@ -278,3 +278,44 @@ input {
       background-position: 0 -50px;
     }
   }
+
+.scaleUpAndDown {
+    /* transition: all;
+    transition-duration: 1.1s; */
+    /* font-size: xx-large; */
+
+    /* animation-timing-function: ease-in-out;
+    animation-name: frontBack;
+    animation-duration: infinite; */
+    /* animation: infinite ease-in-out frontBack; */
+    /* animation: infinite alternate-reverse 1.1s changeSize; */
+    /* animation: alternate infinite .2s frontBack; */
+    animation: frontBack 1s linear infinite;
+    /* animation: turn 1s infinite */
+}
+
+@keyframes frontBack {
+    from {
+        /* transform: translateY(0); */
+        transform: scale(1);
+        /* transform: rotate(0deg); */
+        /* font-size: 1rem; */
+    }
+
+    to {
+
+        /* font-size: 1.3rem; */
+        /* transform: rotate(180deg); */
+        transform: scale(1.1);
+        /* transform: translateY(20); */
+    }
+}
+
+
+@keyframes turn {
+  0%
+    {transform: rotate(0deg)}
+
+  100%
+    {transform: rotate(360deg)}
+}
